# InstantTTS

./: LICENSE  README.md  main.py  pyproject.toml
src/: main.py
